# sirchmunk

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  setup.py
.github/workflows/: docker-image.yaml
agentic_search/: search.py
agentic_search/insight/: __init__.py  text_insights.py
agentic_search/learnings/: evidence_processor.py  knowledge_bank.py
agentic_search/llm/: ollama_server.py  ollama_server.py.back  openai.py  prompts.py
agentic_search/retrieve/: base.py  text_retriever.py
agentic_search/scan/: base.py  file_scanner.py  web_scanner.py
agentic_search/schema/: cognition.py  knowledge.py  metadata.py  request.py  response.py  snapshot.py
agentic_search/storage/: knowledge_storage.py
agentic_search/utils/: file_utils.py  installation_utils.py  utils.py
benchmarks/financebench/: README.md  analyze_results.py  config.py  data_loader.py  evaluate.py  judge.py  run_benchmark.py  runner.py
benchmarks/hotpotqa/: README.md  analyze_results.py  config.py  evaluate.py  run_benchmark.py  runner.py
config/: env.example  mcp_config.json
docker/: Dockerfile.ubuntu  README.md  build_image.py  docker-compose.yml  entrypoint.sh
requirements/: core.txt  framework.txt  ollama.txt  vision.txt  web.txt
scripts/: generate_roster.py  install_all.py  start_ollama.sh  start_web.py  stop_web.py
src/agentic_search/: search.py
src/agentic_search/insight/: text_insights.py
src/agentic_search/learnings/: evidence_processor.py  knowledge_bank.py
src/agentic_search/retrieve/: text_retriever.py
src/agentic_search/scan/: file_scanner.py  web_scanner.py
src/agentic_search/schema/: metadata.py  snapshot.py
src/agentic_search/storage/: knowledge_storage.py
src/agentic_search/utils/: constants.py
src/api/: README.md  chat.py  history.py  hub.py  knowledge.py  main.py  monitor.py  notebook.py  research.py  run_server.py  search.py  settings.py  tools.py
src/api/components/: history_storage.py  monitor_tracker.py  settings_storage.py
src/sentis/: __init__.py  search.py
src/sentis/insight/: text_insights.py
src/sentis/learnings/: evidence_processor.py  knowledge_bank.py
src/sentis/llm/: openai_chat.py
src/sentis/retrieve/: text_retriever.py
src/sentis/scan/: file_scanner.py  web_scanner.py
src/sentis/schema/: __init__.py  metadata.py  snapshot.py
src/sentis/storage/: duckdb.py  knowledge_storage.py
src/sentis/utils/: installation_utils.py  utils.py
src/sirchmunk/: base.py  doc_qa.py  search.py  version.py
src/sirchmunk/agentic/: __init__.py  belief_state.py  dir_scan_tool.py  prompts.py  react_agent.py  tools.py
src/sirchmunk/api/: chat.py  file_service.py  files.py  knowledge.py  main.py  search.py  security.py  settings.py
src/sirchmunk/api/components/: history_storage.py  monitor_tracker.py  settings_storage.py
src/sirchmunk/cli/: cli.py  web_launcher.py
src/sirchmunk/insight/: text_insights.py
src/sirchmunk/learnings/: README.md  __init__.py  _types.py  chunking.py  compiler.py  evidence_cache.py  evidence_processor.py  knowledge_bank.py  knowledge_base.py  lint.py  sampling.py  scoring.py  summary_index.py  toc_extractor.py  tree_indexer.py
src/sirchmunk/llm/: __init__.py  ollama_server.py  openai_chat.py  prompts.py  vlm_chat.py
src/sirchmunk/memory/: README.md  __init__.py  base.py  bridge.py  corpus_memory.py  failure_memory.py  feedback.py  manager.py  path_memory.py  pattern_memory.py  planner.py  query_similarity.py  schemas.py
src/sirchmunk/retrieve/: text_retriever.py
src/sirchmunk/scan/: dir_scanner.py  file_scanner.py  web_scanner.py
src/sirchmunk/schema/: context.py  knowledge.py  metadata.py  search_context.py  snapshot.py
src/sirchmunk/storage/: __init__.py  base.py  duckdb.py  history_storage.py  knowledge_manager.py  knowledge_storage.py  settings_storage.py  vision_store.py
src/sirchmunk/utils/: __init__.py  bm25_util.py  constants.py  document_extractor.py  embedding_util.py  file_utils.py  installation_utils.py  log_utils.py  tokenizer_util.py
src/sirchmunk/vision/: probabilistic_scout.py  vector_search.py  vision_search.py  visual_grep.py
src/sirchmunk/vision/operators/: siglip_embed_op.py
src/sirchmunk_mcp/: BUILD.md  INSTALL.md  INSTALL_MCP.md  MANIFEST.in  MCP_QUICKSTART.md  QUICKSTART.md  README.md  __init__.py  cli.py  config.py  pyproject.toml  server.py  service.py  setup.py  tools.py
src/sirchmunk_mcp/config/: env.example
src/sirchmunk_mcp/examples/: README.md  claude_code_setup.md  cursor_mcp_config.json  cursor_mcp_config_local_llm.json  cursor_mcp_config_venv.json
src/sirchmunk_mcp/tests/: __init__.py  test_mcp_server.py
tests/: test_search.py  test_vector_search.py
web/: README.md  next.config.js  tsconfig.tsbuildinfo
web/app/: layout.tsx  page.tsx
web/app/history/: page.tsx
web/app/knowledge/: page.tsx
web/app/monitor/: page.tsx
web/app/notebook/: page.tsx
web/app/settings/: page.tsx
web/app/solver/: page.tsx
web/components/: ChatSessionDetail.tsx  FileUpload.tsx  RightSidebar.tsx  Sidebar.tsx
web/context/: GlobalContext.tsx
web/lib/: api.ts  i18n.ts
