[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirchmunk-mcp"
version = "0.1.0"
description = "MCP server for Sirchmunk intelligent code and document search"
readme = "README_MCP.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "ModelScope Contributors", email = "contact@modelscope.cn"},
]
keywords = ["mcp", "search", "code-search", "ai", "llm", "knowledge-management", "document-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
    "aiofiles>=23.0.0",
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.0.0",
    "modelscope>=1.9.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sirchmunk-mcp = "sirchmunk_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/modelscope/sirchmunk"
Documentation = "https://github.com/modelscope/sirchmunk#readme"
Repository = "https://github.com/modelscope/sirchmunk"
Issues = "https://github.com/modelscope/sirchmunk/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
